# elsm

./: Cargo.toml
examples/: record_batch_stream.rs  simple_crud.rs  transaction.rs
src/: builder.rs  lib.rs  mem_table.rs  record.rs  schema.rs  scope.rs  transaction.rs
src/bench/: bench.rs
src/benches/: Cargo.toml
src/benches/src/: main.rs
src/benchs/: Cargo.toml
src/benchs/src/: main.rs
src/compactor/: mod.rs
src/elsm_marco/src/: lib.rs
src/index_batch/: stream.rs
src/mem_table/: mod.rs  stream.rs
src/serdes/: arc.rs  boolean.rs  mod.rs  num.rs  option.rs  string.rs
src/stream/: batch_stream.rs  buf_stream.rs  level_stream.rs  merge_stream.rs  mod.rs  record_batch_stream.rs  table_stream.rs
src/version/: cleaner.rs  edit.rs  mod.rs  set.rs
src/wal/: checksum.rs  mod.rs
src/wal/provider/: fs.rs  in_mem.rs  mod.rs
