workspace = { members = [ "src/elsm_marco"] }
[package]
edition = "2021"
name = "elsm"
version = "0.1.0"

[[bench]]
name = "benchmark"
path = "src/bench/bench.rs"
harness = false

[profile.release]
strip = "debuginfo"

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[dependencies]
arrow = "51"
async-channel = "2"
async-lock = "3"
async-stream = "0.3"
bincode = "1"
crc32fast = "1"
crossbeam-queue = "0.3"
elsm_marco = { path = "src/elsm_marco" }
futures = "0.3"
fxhash = "0.2"
itertools = "0.13"
# replace them with std::sync::lazy, once stabilized
lazy_static = "1"
once_cell = "1"
parquet = { version = "51", features = ["async"] }
pin-project = "1"
pin-project-lite = "0.2"
regex = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
ulid = "1"
unsend = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
itertools = "0.13"
rand = "0.8"
tempfile = "3"
